# task0b

./: CMakeLists.txt  FileReader.cpp  FileReader.h  ReportService.cpp  ReportService.h  TokenService.cpp  TokenService.h  WordStatService.cpp  WordStatService.h  main.cpp  test.cpp
